--- a/css/styles-mde.css
+++ b/css/styles-mde.css
@@ -1,9 +1,26 @@
 body{
-    font-family: 'Rubik', sans-serif !important;
+    font-family: 'Outfit', sans-serif !important;
+}
+
+.textoppal1{
+    font-weight:600 !important;
+}
+
+.bloque-1{
+    background-color: #E2DEA9 ;
+
+}
+
+.barra-logo{
+    display: block !important;
 }
 
 .barra{
     background-color: #F4FCD9;
+}
+
+.navbar-nav a{
+    border: none !important;
 }
 
 .video-inicio{
@@ -86,7 +103,7 @@ body{
 
 .carrusel img{
    
-    height: 450px;
+    height: 650px;
 }
 
 .img-inicio{
@@ -97,3 +114,59 @@ body{
 .margin-barra{
     margin-top: 147px;
 }
+
+.bloque-2{
+    background-color: #DDDDDD;
+    color: #BE8C63;
+}
+
+.button-50 {
+    appearance: button;
+    background-color: #000;
+    background-image: none;
+    border: 1px solid #000;
+    border-radius: 4px;
+    box-shadow: #fff 4px 4px 0 0,#000 4px 4px 0 1px;
+    box-sizing: border-box;
+    color: #fff;
+    cursor: pointer;
+    display: inline-block;
+    font-family: ITCAvantGardeStd-Bk,Arial,sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20px;
+    margin: 0 5px 10px 0;
+    overflow: visible;
+    padding: 12px 40px;
+    text-align: center;
+    text-transform: none;
+    touch-action: manipulation;
+    user-select: none;
+    -webkit-user-select: none;
+    vertical-align: middle;
+    white-space: nowrap;
+  }
+  
+  .button-50:focus {
+    text-decoration: none;
+  }
+  
+  .button-50:hover {
+    text-decoration: none;
+  }
+  
+  .button-50:active {
+    box-shadow: rgba(0, 0, 0, .125) 0 3px 5px inset;
+    outline: 0;
+  }
+  
+  .button-50:not([disabled]):active {
+    box-shadow: #fff 2px 2px 0 0, #000 2px 2px 0 1px;
+    transform: translate(2px, 2px);
+  }
+  
+  @media (min-width: 768px) {
+    .button-50 {
+      padding: 12px 50px;
+    }
+  }
